License head added, code and script marshal